--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body{
 }
 
 #root{
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(142, 142, 142);
   width: 1400px;
   height: 1600px;
   box-sizing: border-box;
@@ -12,7 +12,7 @@ body{
   grid-template-columns: repeat(14,100px);
   grid-template-rows: repeat(16,100px);
   grid-template-areas:
-  " uperlogo uperlogo uperlogo uperlogo uperlogo barnav barnav barnav barnav barnav barnav barnav barnav barnav "
+  " uperlogo uperlogo uperlogo uperlogo uperlogo uperlogo barnav barnav barnav barnav barnav barnav barnav barnav "
   " section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1"
   " section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1"
   " section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1 section1"
