--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   justify-items: center;
   align-content: center;
   grid-area: barnav;
+  font: bold 1em "Karla", sans-serif;
 }
 
 .upperlogo {
@@ -13,8 +14,8 @@
   height: 100px;
   position: relative;
   align-items: center;
+  align-content: center;
   justify-content: left;
-  display: flex;
   grid-column: 1/8;
   grid-row: 1/2;
   grid-area: uperlogo;
@@ -45,8 +46,8 @@
 }
 
 .section1{
-  background-color: rgb(57, 80, 62);
-  width: 1400px;
+  background-color: #495E57;
+  width: 700px;
   height: 300px;
   box-sizing: border-box;
   margin: 0px;
@@ -65,7 +66,7 @@
 }
 
 .section3{
-  background-color: rgb(125, 125, 125);
+  background-color: #EDEFEE;
   width: 1400px;
   height: 300px;
   box-sizing: border-box;
@@ -85,7 +86,7 @@
 }
 
 .footerlogo{
-  background-color: rgb(162, 162, 162);
+  background-color: #EDEFEE;
   width: 500px;
   height: 300px;
   box-sizing: border-box;
@@ -101,7 +102,8 @@
 }
 
 .doormat{
-  background-color: rgb(162, 162, 162);
+  background-color: #EDEFEE;
+  color: black;
   width: 300px;
   height: 300px;
   box-sizing: border-box;
@@ -113,7 +115,8 @@
 }
 
 .contact{
-  background-color: rgb(162, 162, 162);
+  background-color: #EDEFEE;
+  color: black;
   width: 300px;
   height: 300px;
   box-sizing: border-box;
@@ -125,7 +128,8 @@
 }
 
 .social{
-  background-color: rgb(162, 162, 162);
+  background-color: #EDEFEE;
+  color: black;
   width: 300px;
   height: 300px;
   box-sizing: border-box;
@@ -134,4 +138,64 @@
   grid-area: social;
   justify-items: center;
   align-content: center;
+}
+
+.doormatnav{
+  font:  1em "Karla", sans-serif;
+  color: black;
+}
+
+.doormatnav ul{
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  line-height: 1.5;
+  color: black;
+}
+
+
+.doormatnav a{
+  color:black;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+}
+
+.doormattitle{
+  margin-right: 20px;
+  padding-right: 20px;
+  font: bold 1em "Karla", sans-serif;
+  text-align: left; 
+}
+
+.maintitle {
+  margin-left: 200px;
+  margin-bottom: 0px;
+  color: #F4CE14;
+}
+
+.mainsubtitle{
+  margin-left: 200px;
+  margin-top: 0px;
+  color: white;
+}
+
+.welcomemessage{
+  margin-left: 200px;
+  color: white;
+  font:  1em "Karla" sans-serif;
+}
+
+.sectiononebutton{
+  background-color:#F4CE14 ;
+  border: none;
+  border-radius: 4px;
+  color: rgb(0, 0, 0);
+  font:  bold 1em "Karla";
+  margin-left: 200px;
+  margin-top: 40px;
+  padding: 0px;
+  width: 200px;
+  height: 40px;
+  cursor: pointer
 }
