--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,9 @@ body{
   grid-template-rows: repeat(16,100px);
   grid-template-areas:
   " uperlogo uperlogo uperlogo uperlogo uperlogo uperlogo barnav barnav barnav barnav barnav barnav barnav barnav "
-  " section1 section1 section1 section1 section1 section1 section1 . . . . . . . "
-  " section1 section1 section1 section1 section1 section1 section1 . . . . . . . "
-  " section1 section1 section1 section1 section1 section1 section1 . . . . . . . "
+  " section1 section1 section1 section1 section1 section1 section1 section1r section1r section1r section1r section1r section1r section1r "
+  " section1 section1 section1 section1 section1 section1 section1 section1r section1r section1r section1r section1r section1r section1r "
+  " section1 section1 section1 section1 section1 section1 section1 section1r section1r section1r section1r section1r section1r section1r "
   " section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2"
   " section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2"
   " section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2 section2"
