--- a/src/components/SectionTwo.css
+++ b/src/components/SectionTwo.css
@@ -48,6 +48,9 @@
     cursor: pointer;
   }
 
+
+  /* ---- Card 1 ----*/
+
   .section2cardone{
     width: 300px;
     height: 600px;
@@ -60,31 +63,19 @@
     align-items: center;
   }
 
-  .section2cardtwo{
-    width: 400px;
-    height: 600px;
-    grid-area: section2cardtwo ;
-    background-color: rgb(235, 237, 186);
-  }
-
-  .section2cardthree{
-    width: 300px;
-    height: 600px;
-    grid-area: section2cardthree ;
-    background-color: rgb(201, 161, 249);
-  }
-
-
   .saladpic{
-    width: 240px;
-    height: 150px;
+    width: 300px;
+    height: 200px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
   }
 
   .cardonetext{
-    width: 240px;
-    height: 300px;
+    width: 300px;
+    height: 320px;
     background-color:#EDEFEE;
-    border-radius: 12px;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
   }
 
   .cardonetitle{
@@ -100,6 +91,7 @@
     font-family: 'Karla', sans-serif;
     font-size: 11pt;
     font-weight:normal;
+    padding: 15px;
   }
 
   .ordercardone{
@@ -108,4 +100,118 @@
     font-size: 12pt;
     font-weight: 600;
     margin-top: 50px;
+
+  /* ----End of Card 1 ----*/
   }
+
+  /* ---- Card 2 ---- */
+  
+  .section2cardtwo{
+    width: 300px;
+    height: 600px;
+    grid-area: section2cardtwo ;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+
+
+  .foodpic2{
+    width: 300px;
+    height: 200px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+  }
+
+  .cardtwotext{
+    width: 300px;
+    height: 320px;
+    background-color:#EDEFEE;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+  }
+
+  .cardtwotitle{
+    color:#000000;
+    justify-self: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 800;
+  }
+
+  .cardtwodescription{
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 11pt;
+    font-weight:normal;
+    padding: 15px;
+  }
+
+  .ordercardtwo{
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 600;
+    margin-top: 50px;
+  }
+  /* ---- End of Card 2 ---- */
+
+
+
+
+  /* ---- Card 3 ---- */
+
+  .section2cardthree{
+    width: 300px;
+    height: 600px;
+    grid-area: section2cardthree ;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+
+  .foodpic3{
+    width: 300px;
+    height: 200px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+  }
+
+  .cardthreetext{
+    width: 300px;
+    height: 320px;
+    background-color:#EDEFEE;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+  }
+
+  .cardthreetitle{
+    color:#000000;
+    justify-self: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 800;
+  }
+
+  .cardthreedescription{
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 11pt;
+    font-weight:normal;
+    padding: 15px;
+  }
+
+  .ordercardthree{
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 600;
+    margin-top: 50px;
+  }
+  /* ---- End of Card 3 ---- */
