Fin del maquetado de la pagina principal

--- a/src/components/SectionOne.css
+++ b/src/components/SectionOne.css
@@ -47,7 +47,7 @@
     cursor: pointer
   }
 
-  
+
   .section1r{
     grid-area: section1r;
     background-color: #495E57;
@@ -67,8 +67,7 @@
     border-radius: 12px;
     width: 300px;
     height: 350px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 12px 0 rgba(0, 0, 0, 0.19);  
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 12px 0 rgba(0, 0, 0, 0.19);
     margin-top: 20px;
   }
 
-  
