--- a/src/App.css
+++ b/src/App.css
@@ -47,27 +47,7 @@
 
 
 
-
-
-.section3{
-  background-color: #EDEFEE;
-  width: 1400px;
-  height: 300px;
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-  grid-area: section3;
-}
-
-.section4{
-  background-color: rgb(255, 255, 255);
-  width: 1400px;
-  height: 300px;
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-  grid-area: section4;
-}
+/* ---- Footer ---- */
 
 .footerlogo{
   background-color: #EDEFEE;
@@ -85,6 +65,10 @@
  margin-left: 200px;
 }
 
+/* ---- End Footer ---- */
+
+/* ---- Doormat ---- */
+
 .doormat{
   background-color: #EDEFEE;
   color: black;
@@ -98,31 +82,6 @@
   align-content: center;
 }
 
-.contact{
-  background-color: #EDEFEE;
-  color: black;
-  width: 300px;
-  height: 300px;
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-  grid-area: contact;
-  justify-items: center;
-  align-content: center;
-}
-
-.social{
-  background-color: #EDEFEE;
-  color: black;
-  width: 300px;
-  height: 300px;
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-  grid-area: social;
-  justify-items: center;
-  align-content: center;
-}
 
 .doormatnav{
   font:  .8em "Karla", sans-serif;
@@ -151,3 +110,87 @@
   font: bold .8em "Karla", sans-serif;
   text-align: left;
 }
+
+/* ---- End Doormat ---- */
+
+/* Contact */
+
+.contact{
+  background-color: #EDEFEE;
+  color: black;
+  width: 300px;
+  height: 300px;
+  box-sizing: border-box;
+  margin: 0px;
+  padding-bottom: 51px;
+  grid-area: contact;
+  justify-items: center;
+  align-content: center;
+}
+
+.contactnav{
+  font:  .8em "Karla", sans-serif;
+  color: black;
+}
+
+.contactnav ul{
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  line-height: 1.5;
+  color: black;
+  text-align: center;
+}
+
+
+.contacttitle{
+  margin-right: 0px;
+  padding-right: 0px;
+  font: bold .8em "Karla", sans-serif;
+  text-align: center;
+}
+
+/* End Contact */
+
+/* Social */
+
+.social{
+  background-color: #EDEFEE;
+  color: black;
+  width: 300px;
+  height: 300px;
+  box-sizing: border-box;
+  margin: 0px;
+  padding-bottom: 51px;
+  grid-area: social;
+  justify-items: center;
+  align-content: center;
+}
+
+.socialnav{
+  font:  .8em "Karla", sans-serif;
+  color: black;
+}
+
+.socialnav ul{
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  line-height: 1.5;
+  color: black;
+}
+
+.socialnav a{
+  color:black;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+}
+
+
+.socialttitle{
+  font: bold .8em "Karla", sans-serif;
+  text-align: left;
+}
+
+/* End Social */
