--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .barranav{
   background-color: rgb(255, 255, 255);
-  width: 800px;
+  max-width: 800px;
+  min-width: 100px;
   height: 100px;
   justify-items: center;
   align-content: center;
@@ -194,3 +195,158 @@
 }
 
 /* End Social */
+
+@media all and (max-width: 430px){
+  .barranav{
+    background-color: rgb(255, 255, 255);
+    width: 400px;
+    height: 100px;
+    grid-area: barnav;
+    font: bold 1em "Karla", sans-serif;
+  }
+  .navbar{
+    width: 400px;
+    height: 100px;
+    margin: 0px;
+    padding: 0px;
+    background-color: blueviolet;
+
+
+  }
+
+  .navbar ul{
+    width: 400px;
+    height: 100px;
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+    overflow:auto;
+    display: flex;
+    align-items: center;
+
+  }
+
+  .navbar li{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 20px;
+    float:left;
+    align-items: center;
+    display: flex;
+  }
+
+  .navbar a{
+    color:black;
+    text-decoration: none;
+    margin: 0px;
+    padding: 0px;
+
+  }
+
+  .upperlogo {
+    background-color: rgb(255, 255, 255);
+    width: 400px;
+    height: 100px;
+    grid-area: upperlogo;
+    display: flex;
+    justify-content: center;
+  }
+
+  .upperlogo img{
+    margin: 0px;
+    padding: 0px;
+    width: 75%;
+  }
+
+
+
+
+
+  /* ---- Footer ---- */
+  
+  .footerlogo{
+    display: none;
+  }
+  
+  .footerlogo img{
+    display: none;
+  }
+  
+  /* ---- End Footer ---- */
+  
+  /* ---- Doormat ---- */
+  
+  .doormat{
+    display: none;
+  }
+  
+  
+  .doormatnav{
+    display: none;
+  }
+  
+  .doormatnav ul{
+    display: none;
+  }
+  
+  
+  .doormatnav a{
+    display: none;
+  }
+  
+  .doormattitle{
+    display: none;
+  }
+  
+  /* ---- End Doormat ---- */
+  
+  /* Contact */
+  
+  .contact{
+    display: none;
+  }
+  
+  .contactnav{
+    display: none;
+  }
+  
+  .contactnav ul{
+    display: none;
+  }
+  
+  
+  .contacttitle{
+    display: none;
+  }
+  
+  /* End Contact */
+  
+  /* Social */
+  
+  .social{
+    display: none;
+  }
+  
+  .socialnav{
+    display: none;
+  }
+  
+  .socialnav ul{
+    display: none;
+  }
+  
+  .socialnav a{
+    display: none;
+  }
+  
+  
+  .socialttitle{
+      display: none;
+  }
+
+
+
+
+
+}
