--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,49 @@ body{
   align-items: center;
 }
 
+
+@media all and (max-width: 430px){
+  #root{
+    background-color: rgb(255, 255, 255);
+    width: 400px;
+    height: 2600px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(4,100px);
+    grid-template-rows: repeat(26,100px);
+    grid-template-areas:
+      "upperlogo upperlogo upperlogo upperlogo" /* 1 */
+      "barnav barnav barnav barnav" /* 2 */
+      ". . . ." /* 3 */
+      ". . . ." /* 4 */
+      ". . . ." /* 5 */
+      ". . . ." /* 6 */
+      ". . . ." /* 7 */
+      ". . . ." /* 8 */
+      ". . . ." /* 9 */
+      ". . . ." /* 10 */
+      ". . . ." /* 11 */
+      ". . . ." /* 12 */
+      ". . . ." /* 13 */
+      ". . . ." /* 14 */
+      ". . . ." /* 15 */
+      ". . . ." /* 16 */
+      ". . . ." /* 17 */
+      ". . . ." /* 18 */
+      ". . . ." /* 19 */
+      ". . . ." /* 20 */
+      ". . . ." /* 21 */
+      ". . . ." /* 22 */
+      ". . . ." /* 23 */
+      ". . . ." /* 24 */
+      ". . . ." /* 25 */
+      ". . . ." /* 26 */
+
+    ;
+    justify-items: center;
+    align-items: center;
+  }
+
+
+
+}
