--- a/src/App.css
+++ b/src/App.css
@@ -197,32 +197,40 @@
 /* End Social */
 
 @media all and (max-width: 430px){
+ 
   .barranav{
     background-color: rgb(255, 255, 255);
-    width: 400px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     grid-area: barnav;
     font: bold 1em "Karla", sans-serif;
-  }
-  .navbar{
-    width: 400px;
-    height: 100px;
+    overflow: scroll;
     margin: 0px;
     padding: 0px;
-    background-color: blueviolet;
-
+    box-sizing: border-box;
+  }
+  .navbar{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
 
   }
 
   .navbar ul{
     width: 400px;
-    height: 100px;
+    min-height: 90px;
+    height: 100%;
     list-style-type: none;
     padding: 0px;
     margin: 0px;
-    overflow:auto;
+    overflow-x: scroll;
     display: flex;
+    flex-direction: row;
     align-items: center;
+
 
   }
 
@@ -230,7 +238,11 @@
     width: 100%;
     height: 100%;
     margin: 0px;
-    padding: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 30px;
     float:left;
     align-items: center;
     display: flex;
@@ -246,8 +258,8 @@
 
   .upperlogo {
     background-color: rgb(255, 255, 255);
-    width: 400px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     grid-area: upperlogo;
     display: flex;
     justify-content: center;
@@ -256,7 +268,7 @@
   .upperlogo img{
     margin: 0px;
     padding: 0px;
-    width: 75%;
+    width: 50%;
   }
 
 
@@ -266,12 +278,23 @@
   /* ---- Footer ---- */
   
   .footerlogo{
-    display: none;
+    background-color: #EDEFEE;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    grid-area: footerlogo;
+    display: flex;
+    justify-items: center;
+    align-content: center;
+    justify-content: center;
   }
   
   .footerlogo img{
-    display: none;
-  }
+    width: 30%;
+    margin: 0px;
+   }
   
   /* ---- End Footer ---- */
   
