--- a/src/components/SectionFour.css
+++ b/src/components/SectionFour.css
@@ -85,44 +85,111 @@
 
   /* End of SECTION 4 */
 
+/************************************************** Media Query *****************************************/
+
   @media all and (max-width: 430px){
 /* SECTION 4 */
 
 .section4title{
-  display: none;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  grid-area: section4title;
+  text-align: center;
+  align-content: center;
 }
 
+
 .section4title h1{
-  display: none;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  color: #F4CE14;
+  font-family: "Markazi Text";
+  font-size: 30pt;
 }
 
 .section4subtitle{
-  display: none;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0px;
+  margin-top: -50px;
+  padding: 0px;
+  grid-area: section4subtitle;
+  text-align: center;
+  align-content:start;
 }
 
 .section4subtitle h2{
-  display: none;
+  margin: 0px;
+  padding: 0px;
+  color: #000000;
+  font-family: "Markazi Text";
+  font-size: 18pt;
 }
 
 .section4description{
-  display: none;
-}
-
-.chef1{
-  display: none;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  margin-top: 0px;
+  margin-top: -180px;
+  padding: 0px;
+  padding-left: 15px;
+  padding-right: 15px;
+  grid-area: section4description;
+  text-align:justify;
+  color: #000000;
+  font-family: "Karla", sans-serif;
+  font-size: 11pt;
 }
 
 .chef1container{
-  display: none;
-}
+  width: 100%;
+  height: 120%;
+  margin-top: 50px;
+  grid-area: chef1container;
+  display: flex;
+  justify-content: center;
+ }
 
- .chef2{
-  display: none;
+.chef1{
+  width: 90%;
+  height: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 12px 0 rgba(0, 0, 0);
 }
 
 .chef2container{
-display: none;
+
+  width: 100%;
+  height: 100%;
+  margin-top: 0px;
+  margin-left: 0px;
+  grid-row: 53/58;
+  grid-column: 1/5;
+  display: flex;
+  justify-content: center;
+
 }
 
+
+ .chef2{
+
+  width: 90%;
+  height: 90%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 12px 0 rgba(0, 0, 0);
+
+
+}
 
 }
