--- a/src/components/SectionThree.css
+++ b/src/components/SectionThree.css
@@ -199,46 +199,98 @@
 
 /* ---- END BOX 3 ---- */
 
+/********************************************************* MEDIA QUERY *******************************/
+
 @media all and (max-width: 430px){
     /* ---- GENERAL ---- */
-.section3background{
-    display: none;
+    .section3background{
+        background-color:#404040 ;
+        width: 100%;
+        height: 100%;
+        grid-column: 1/5;
+        grid-row: 30/44;
+    
+    }
 
-}
+    .rating{
+        font-size: 1.5em;
+        font-family: "Karla", sans-serif;
+        font-style: italic;
+        margin: 0px;
+        padding: 0px;
+    }
 
-.rating{
-    display: none;
-}
-
-.section3title{
-    display: none;
-}
+    .section3title{
+        width: 100%;
+        height: 100%;
+        color: white;
+        font-family: "Karla", sans-serif;
+        font-size: 12pt;
+        font-weight: 800;
+        grid-area: section3title;
+        z-index: 99;
+        text-align: center;
+        margin: 0px;
+        padding: 0px;
+        align-content: center;
+    }
 
 /* ---- END GENERAL ---- */
 
 /* ---- BOX 1 ---- */
 
 .section3box1{
-    display: none;
+    background-color: #EDEFEE;
+    width: 70%;
+    height: 90%;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    grid-area: section3box1;
+    align-items: center;
+    justify-content: space-around;
+    font-family: "Karla", sans-serif;
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    z-index: 99;
+    box-shadow: 5px 5px 5px 5px rgb(33, 33, 33);
 
   }
 
 
 
 .person1{
-    display: none;
+    width: 150px;
+    height: 150px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    object-fit:cover;
+    margin: 0px;
+    margin-bottom: 10px;
 }
 
 .person1text{
-    display: none;
+    justify-self: center;
+    align-self: center;
 }
 
 .person1name{
-    display: none;
+    margin: 0px;
+    padding: 0px;
+    justify-self: center;
+    font-size: 2em;
+    margin-top: -10px;
 }
 
 .person1description{
-    display: none;
+    margin: 0px;
+    padding-left: 30px;
+    padding-right: 30px;
+    justify-self: center;
+    text-align: center;
+    font-size: .9em;
 
 }
 
@@ -248,23 +300,52 @@
 /* ---- BOX 2 ---- */
 
 .section3box2{
-    display: none;
+    background-color: #EDEFEE;
+    width: 70%;
+    height: 90%;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    grid-area: section3box2;
+    align-items: center;
+    justify-content: space-around;
+    font-family: "Karla", sans-serif;
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    z-index: 99;
+    box-shadow: 5px 5px 5px 5px rgb(33, 33, 33);
   }
 
 .person2{
-    display: none;
+    width: 150px;
+    height: 150px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    object-fit:cover;
 }
 
 .person2text{
-    display: none;
+    justify-self: center;
+    align-self: center;
 }
 
 .person2name{
-    display: none;
+    margin: 0px;
+    padding: 0px;
+    justify-self: center;
+    font-size: 2em;
+    margin-top: -10px;
 }
 
 .person2description{
-    display: none;
+    margin: 0px;
+    padding-left: 30px;
+    padding-right: 30px;
+    justify-self: center;
+    text-align: center;
+    font-size: .9em;
 
 }
 
@@ -273,23 +354,52 @@
 /* ---- BOX 3 ---- */
 
 .section3box3{
-    display: none;
+    background-color: #EDEFEE;
+    width: 70%;
+    height: 90%;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    grid-area: section3box3;
+    align-items: center;
+    justify-content: space-around;
+    font-family: "Karla", sans-serif;
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    z-index: 99;
+    box-shadow: 5px 5px 5px 5px rgb(33, 33, 33);
   }
 
 .person3{
-    display: none;
+    width: 150px;
+    height: 150px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    object-fit:cover;
 }
 
 .person3text{
-    display: none;
+    justify-self: center;
+    align-self: center;
 }
 
 .person3name{
-    display: none;
+    margin: 0px;
+    padding: 0px;
+    justify-self: center;
+    font-size: 2em;
+    margin-top: -10px;
 }
 
 .person3description{
-display: none;
+    margin: 0px;
+    padding-left: 30px;
+    padding-right: 30px;
+    justify-self: center;
+    text-align: center;
+    font-size: .9em;
 
 }
 
