--- a/src/components/SectionTwo.css
+++ b/src/components/SectionTwo.css
@@ -100,12 +100,12 @@
     font-size: 12pt;
     font-weight: 600;
     margin-top: 50px;
-
-  /* ----End of Card 1 ----*/
   }
 
+  /* ----End of Card 1 ----*/
+
   /* ---- Card 2 ---- */
-  
+
   .section2cardtwo{
     width: 300px;
     height: 600px;
@@ -226,78 +226,170 @@
 
   @media all and (max-width: 430px){
 .section2{
-  display: none;
+  background-color: rgb(255, 255, 255);
+  width: 1400px;
+  height: 600px;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  grid-area: section2;
   }
 
   .section2title{
-    display: none;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    margin: 0px;
+    padding-left: 0px;
+    align-content: center;
+    justify-content: center;
+    grid-area: section2title;
+    display: flex;
   }
 
   .section2title h1{
-    display: none;
+    font-family: 'Karla', sans-serif;
+    font-size: 15pt;
+    font-weight: 800;
+    margin: 0px;
+    margin-top: 15%;
   }
 
   .section2button{
-    display: none;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    margin: 0px;
+    padding-left: 0px;
+    padding-top: 0px;
+    align-content: center;
+    grid-area: section2button;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
   }
 
   .section2buttonstyle{
-    display: none;
+    background-color:#F4CE14 ;
+    border: none;
+    border-radius: 8px;
+    color: rgb(0, 0, 0);
+    font:  bold .8em "Arial";
+    width: 200px;
+    height: 40px;
+    cursor: pointer;
   }
 
 
   /* ---- Card 1 ----*/
 
   .section2cardone{
-    display: none;
+    width: 300px;
+    height: 600px;
+    grid-area: section2cardone ;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
   }
 
   .saladpic{
-    display: none;
+    width: 300px;
+    height: 200px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
   }
 
   .cardonetext{
-    display: none;
+    width: 300px;
+    height: 320px;
+    background-color:#EDEFEE;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
   }
 
   .cardonetitle{
-    display: none;
+    color:#000000;
+    justify-self: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 800;
   }
 
   .cardonedescription{
-    display: none;
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 11pt;
+    font-weight:normal;
+    padding: 15px;
   }
 
   .ordercardone{
-    display: none;
-  /* ----End of Card 1 ----*/
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 600;
+    margin-top: 50px;
   }
 
+  /* ----End of Card 1 ----*/
+
   /* ---- Card 2 ---- */
-  
+
   .section2cardtwo{
-    display: none;
+    width: 300px;
+    height: 600px;
+    grid-area: section2cardtwo ;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
   }
 
 
   .foodpic2{
-    display: none;
+    width: 300px;
+    height: 200px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
   }
 
   .cardtwotext{
-    display: none;
+    width: 300px;
+    height: 320px;
+    background-color:#EDEFEE;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
   }
 
   .cardtwotitle{
-    display: none;
+    color:#000000;
+    justify-self: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 800;
   }
 
   .cardtwodescription{
-    display: none;
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 11pt;
+    font-weight:normal;
+    padding: 15px;
   }
 
   .ordercardtwo{
-    display: none;
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 600;
+    margin-top: 50px;
   }
   /* ---- End of Card 2 ---- */
 
@@ -307,27 +399,54 @@
   /* ---- Card 3 ---- */
 
   .section2cardthree{
-    display: none;
+    width: 300px;
+    height: 600px;
+    grid-area: section2cardthree ;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
   }
 
   .foodpic3{
-    display: none;
+    width: 300px;
+    height: 200px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
   }
 
   .cardthreetext{
-    display: none;
+    width: 300px;
+    height: 320px;
+    background-color:#EDEFEE;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
   }
 
   .cardthreetitle{
-    display: none;
+    color:#000000;
+    justify-self: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 800;
   }
 
   .cardthreedescription{
-    display: none;
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 11pt;
+    font-weight:normal;
+    padding: 15px;
   }
 
   .ordercardthree{
-    display: none;
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 12pt;
+    font-weight: 600;
+    margin-top: 50px;
   }
   /* ---- End of Card 3 ---- */
 
