--- a/src/components/SectionThree.css
+++ b/src/components/SectionThree.css
@@ -9,7 +9,7 @@
 }
 
 .rating{
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-family: "Karla", sans-serif;
     font-style: italic;
     margin: 0px;
@@ -74,7 +74,7 @@
     margin: 0px;
     padding: 0px;
     justify-self: center;
-    font-size: 2em;
+    font-size: 1.5em;
     margin-top: -10px;
 }
 
@@ -129,7 +129,7 @@
     margin: 0px;
     padding: 0px;
     justify-self: center;
-    font-size: 2em;
+    font-size: 1.5em;
     margin-top: -10px;
 }
 
@@ -183,7 +183,7 @@
     margin: 0px;
     padding: 0px;
     justify-self: center;
-    font-size: 2em;
+    font-size: 1.5em;
     margin-top: -10px;
 }
 
@@ -213,9 +213,10 @@
     }
 
     .rating{
-        font-size: 1.5em;
+        font-size: 1.2em;
         font-family: "Karla", sans-serif;
         font-style: italic;
+        font-weight: bold;
         margin: 0px;
         padding: 0px;
     }
@@ -241,10 +242,12 @@
 
 .section3box1{
     background-color: #EDEFEE;
-    width: 70%;
-    height: 90%;
+    width: 80%;
+    height: 100%;
     box-sizing: border-box;
     margin: 0px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     padding: 0px;
     grid-area: section3box1;
     align-items: center;
@@ -257,8 +260,6 @@
     box-shadow: 5px 5px 5px 5px rgb(33, 33, 33);
 
   }
-
-
 
 .person1{
     width: 150px;
@@ -280,7 +281,7 @@
     margin: 0px;
     padding: 0px;
     justify-self: center;
-    font-size: 2em;
+    font-size: 1.5em;
     margin-top: -10px;
 }
 
@@ -290,7 +291,7 @@
     padding-right: 30px;
     justify-self: center;
     text-align: center;
-    font-size: .9em;
+    font-size: .8em;
 
 }
 
@@ -301,10 +302,12 @@
 
 .section3box2{
     background-color: #EDEFEE;
-    width: 70%;
-    height: 90%;
+    width: 80%;
+    height: 100%;
     box-sizing: border-box;
     margin: 0px;
+    margin-top: 100px;
+    margin-bottom: 50px;
     padding: 0px;
     grid-area: section3box2;
     align-items: center;
@@ -335,7 +338,7 @@
     margin: 0px;
     padding: 0px;
     justify-self: center;
-    font-size: 2em;
+    font-size: 1.5em;
     margin-top: -10px;
 }
 
@@ -345,7 +348,7 @@
     padding-right: 30px;
     justify-self: center;
     text-align: center;
-    font-size: .9em;
+    font-size: .8em;
 
 }
 
@@ -355,10 +358,11 @@
 
 .section3box3{
     background-color: #EDEFEE;
-    width: 70%;
-    height: 90%;
+    width: 80%;
+    height: 100%;
     box-sizing: border-box;
     margin: 0px;
+    margin-top: 100px;
     padding: 0px;
     grid-area: section3box3;
     align-items: center;
@@ -389,7 +393,7 @@
     margin: 0px;
     padding: 0px;
     justify-self: center;
-    font-size: 2em;
+    font-size: 1.5em;
     margin-top: -10px;
 }
 
@@ -399,7 +403,7 @@
     padding-right: 30px;
     justify-self: center;
     text-align: center;
-    font-size: .9em;
+    font-size: .8em;
 
 }
 
