--- a/src/index.css
+++ b/src/index.css
@@ -3,122 +3,6 @@ body{
   justify-items: center;
 }
 
-#root{
-  background-color: rgb(255, 255, 255);
-  width: 1400px;
-  height: 2600px;
-  box-sizing: border-box;
-  display: grid;
-  grid-template-columns: repeat(14,100px);
-  grid-template-rows: repeat(26,100px);
-  grid-template-areas:
-  " uperlogo uperlogo uperlogo uperlogo uperlogo uperlogo barnav barnav barnav barnav barnav barnav barnav barnav "
-  " section1 section1 section1 section1 section1 section1 section1 section1r section1r section1r section1r section1r section1r section1r "
-  " section1 section1 section1 section1 section1 section1 section1 section1r section1r section1r section1r section1r section1r section1r "
-  " section1 section1 section1 section1 section1 section1 section1 section1r section1r section1r section1r section1r section1r section1r "
-  " section2title section2title section2title section2title section2title section2title section2title section2button section2button section2button section2button section2button section2button section2button"
-  " . . section2cardone section2cardone section2cardone section2cardtwo section2cardtwo section2cardtwo section2cardtwo section2cardthree section2cardthree section2cardthree . ."
-  " . . section2cardone section2cardone section2cardone section2cardtwo section2cardtwo section2cardtwo section2cardtwo section2cardthree section2cardthree section2cardthree . ."
-  " . . section2cardone section2cardone section2cardone section2cardtwo section2cardtwo section2cardtwo section2cardtwo section2cardthree section2cardthree section2cardthree . ."
-  " . . section2cardone section2cardone section2cardone section2cardtwo section2cardtwo section2cardtwo section2cardtwo section2cardthree section2cardthree section2cardthree . ."
-  " . . section2cardone section2cardone section2cardone section2cardtwo section2cardtwo section2cardtwo section2cardtwo section2cardthree section2cardthree section2cardthree . ."
-  " . . section2cardone section2cardone section2cardone section2cardtwo section2cardtwo section2cardtwo section2cardtwo section2cardthree section2cardthree section2cardthree . ."
-  " . . . . . section3title section3title section3title section3title . . . . . "
-  " . . section3box1 section3box1 section3box1 section3box2 section3box2 section3box2 section3box2 section3box3 section3box3 section3box3 . ."
-  " . . section3box1 section3box1 section3box1 section3box2 section3box2 section3box2 section3box2 section3box3 section3box3 section3box3 . ."
-  " . . section3box1 section3box1 section3box1 section3box2 section3box2 section3box2 section3box2 section3box3 section3box3 section3box3 . ."
-  " . . section3box1 section3box1 section3box1 section3box2 section3box2 section3box2 section3box2 section3box3 section3box3 section3box3 . ."
-  " . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . ."
-  " . . section4title section4title section4title section4title . chef1container chef1container chef1container . . . ."
-  " . . section4subtitle section4subtitle section4subtitle section4subtitle . chef1container chef1container chef1container . . . ."
-  " . . section4description section4description section4description section4description . chef1container chef1container chef1container . . . ."
-  " . . section4description section4description section4description section4description . chef1container chef1container chef1container . . . ."
-  " . . . . . . . . . . . . . ."
-  " footerlogo footerlogo footerlogo footerlogo footerlogo doormat doormat doormat contact contact contact social social social "
-  " footerlogo footerlogo footerlogo footerlogo footerlogo doormat doormat doormat contact contact contact social social social "
-  " footerlogo footerlogo footerlogo footerlogo footerlogo doormat doormat doormat contact contact contact social social social "
-  ;
-  justify-items: center;
-  align-items: center;
-}
-
-
-@media all and (max-width: 430px){
-  #root{
-    background-color: rgb(255, 255, 255);
-    max-width: 430px;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(58,100px);
-    grid-template-areas:
-      "upperlogo upperlogo upperlogo upperlogo" /* 1 */
-      "barnav barnav barnav barnav" /* 2 */
-      "section1 section1 section1 section1" /* 3 */
-      "section1 section1 section1 section1" /* 4 */
-      "section1 section1 section1 section1" /* 5 */
-      "section1 section1 section1 section1" /* 6 */
-      "section1r section1r section1r section1r" /* 7 */
-      "section1r section1r section1r section1r" /* 8 */
-      "section1r section1r section1r section1r" /* 9 */
-      "section2title section2title section2title section2title" /* 10 */
-      "section2cardone section2cardone section2cardone section2cardone" /* 11 */
-      "section2cardone section2cardone section2cardone section2cardone" /* 12 */
-      "section2cardone section2cardone section2cardone section2cardone" /* 13 */
-      "section2cardone section2cardone section2cardone section2cardone" /* 14 */
-      "section2cardone section2cardone section2cardone section2cardone" /* 15 */
-      "section2cardone section2cardone section2cardone section2cardone" /* 16 */
-      "section2cardtwo section2cardtwo section2cardtwo section2cardtwo" /* 17 */
-      "section2cardtwo section2cardtwo section2cardtwo section2cardtwo" /* 18 */
-      "section2cardtwo section2cardtwo section2cardtwo section2cardtwo" /* 19 */
-      "section2cardtwo section2cardtwo section2cardtwo section2cardtwo" /* 20 */
-      "section2cardtwo section2cardtwo section2cardtwo section2cardtwo" /* 21 */
-      "section2cardtwo section2cardtwo section2cardtwo section2cardtwo" /* 22 */
-      "section2cardthree section2cardthree section2cardthree section2cardthree" /* 23 */
-      "section2cardthree section2cardthree section2cardthree section2cardthree" /* 24 */
-      "section2cardthree section2cardthree section2cardthree section2cardthree" /* 25 */
-      "section2cardthree section2cardthree section2cardthree section2cardthree" /* 26 */
-      "section2cardthree section2cardthree section2cardthree section2cardthree" /* 27 */
-      "section2cardthree section2cardthree section2cardthree section2cardthree" /* 28 */
-      "section2button section2button section2button section2button" /* 29 */
-      "section3title section3title section3title section3title" /* 30 */
-      "section3box1 section3box1 section3box1 section3box1" /* 31 */
-      "section3box1 section3box1 section3box1 section3box1" /* 32 */
-      "section3box1 section3box1 section3box1 section3box1" /* 33 */
-      "section3box1 section3box1 section3box1 section3box1" /* 34 */
-      "section3box2 section3box2 section3box2 section3box2" /* 35 */
-      "section3box2 section3box2 section3box2 section3box2" /* 36 */
-      "section3box2 section3box2 section3box2 section3box2" /* 37 */
-      "section3box2 section3box2 section3box2 section3box2" /* 38 */
-      "section3box3 section3box3 section3box3 section3box3" /* 39 */
-      "section3box3 section3box3 section3box3 section3box3" /* 40 */
-      "section3box3 section3box3 section3box3 section3box3" /* 41 */
-      "section3box3 section3box3 section3box3 section3box3" /* 42 */
-      ". . . ." /* 43 */
-      "section4title section4title section4title section4title" /* 44 */
-      "section4subtitle section4subtitle section4subtitle section4subtitle" /* 45 */
-      "section4description section4description section4description section4description" /* 46 */
-      "section4description section4description section4description section4description" /* 47 */
-      "chef1container chef1container chef1container chef1container" /* 48 */
-      "chef1container chef1container chef1container chef1container" /* 49 */
-      "chef1container chef1container chef1container chef1container" /* 50 */
-      "chef1container chef1container chef1container chef1container" /* 51 */
-      ". . . ." /* 52 */
-      ". . . ." /* 53 */
-      ". . . ." /* 54 */
-      ". . . ." /* 55 */
-      ". . . ." /* 56 */
-      ". . . ." /* 57 */
-      "footerlogo footerlogo footerlogo footerlogo" /* 58 */
-
-    ;
-    justify-items: center;
-    align-items: center;
-  }
-
-
-
+:root{
+ background-color: #202020;
 }
