--- a/src/Booking.css
+++ b/src/Booking.css
@@ -1,51 +1,115 @@
 .container2{
     background-color: rgb(255, 255, 255);
     width: 1400px;
-    height: 2600px;
+    height: 1200px;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(14,100px);
-    grid-template-rows: repeat(26,100px);
+    grid-template-rows: repeat(12,100px);
     grid-template-areas:
     " uperlogo uperlogo uperlogo uperlogo uperlogo uperlogo barnav barnav barnav barnav barnav barnav barnav barnav "
-    ". . formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 . ."
-    ". . formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 . ."
-    ". . formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 . ."
-    ". . formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 formbox1 . ."
+    ". . . . . . . . . . . . . ."
+    ". backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking formbox1 formbox1 formbox1 formbox1 ."
+    ". backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking formbox1 formbox1 formbox1 formbox1 ."
+    ". backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking formbox1 formbox1 formbox1 formbox1 ."
+    ". backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking formbox1 formbox1 formbox1 formbox1 ."
+    ". backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking backgroundbooking formbox1 formbox1 formbox1 formbox1 ."
     ". . . . . . . . . . . . . ."
     ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
-    ". . . . . . . . . . . . . ."
+    " footerlogo footerlogo footerlogo footerlogo footerlogo doormat doormat doormat contact contact contact social social social "
+    " footerlogo footerlogo footerlogo footerlogo footerlogo doormat doormat doormat contact contact contact social social social "
+    " footerlogo footerlogo footerlogo footerlogo footerlogo doormat doormat doormat contact contact contact social social social "
+}
+
+.backgroundbooking{
+    background-color: #495E57;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    grid-area: backgroundbooking;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 12px 0 rgba(0, 0, 0, 0.19);
+    overflow: hidden;
+
+}
+
+.backgroundbooking h1{
+    color:#F4CE14;
+    font-family:'Markazi Text';
+    font-size: 2.5em;
+    font-weight: bold;
+
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 0px;
+
+}
+
+.backgroundbooking h2{
+    color:white;
+    font-family:'Markazi Text';
+    font-size: 1.5em;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5px;
+
+}
+
+.backgroundbooking p{
+    color: white;
+    font-family: 'Karla', sans-serif;
+    font-size: .8em;
+    word-break: break-all;
+    margin-left: 5%;
+    margin-right: 5%;
+
+}
+
+.panoramic{
+    width: 90%;
+    height: 40%;
+    margin: 0px;
+    margin-left: 5%;
+    padding: 0%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 12px 0 rgba(0, 0, 0, 0.19);
+}
+
+.panoramic img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .formbox1{
     font-family: "Karla", sans-serif;
     font-size: 1em;
-    width: 1000px;
-    height: 400px;
-    background-color: rgb(137, 136, 138);
+    color: white;
+    width: 100%;
+    height: 100%;
     align-items: center;
     justify-items: center;
     align-content: center;
     justify-content: center;
     grid-area: formbox1;
+    background-color: #495E57;	
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 12px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 12px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 12px 0 rgba(0, 0, 0, 0.19);
+}
+
+.formbox1 input{
+    border-radius: 12px;
+    
+}
+
+.formbox1 select{
+    border-radius: 12px;
 }
 
 .formbox1 input select{
@@ -53,6 +117,7 @@
     font-size: 1em;
     width: 100%;
     height: 100%;
+    
 
 }
 
@@ -60,5 +125,21 @@
 .formstyle{
     display: grid;
     width: 70%;
-    gap:20px;
+    gap: 10px;
+}
+
+#reservationbutton{
+    background-color:#F4CE14 ;
+    border: none;
+    border-radius: 8px;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    font-size: .7em;
+    font-weight: bold;
+    margin-left: 0px;
+    margin-top: 25px;
+    padding: 0px;
+    width: 200px;
+    height: 40px;
+    justify-self: center;
 }
