--- a/src/Booking.css
+++ b/src/Booking.css
@@ -117,15 +117,17 @@
     font-size: 1em;
     width: 100%;
     height: 100%;
-    
+}
 
+.formbox1 label{
+    margin-top: 10px;
 }
 
 
 .formstyle{
     display: grid;
     width: 70%;
-    gap: 10px;
+    gap: 5px;
 }
 
 #reservationbutton{
@@ -142,4 +144,12 @@
     width: 200px;
     height: 40px;
     justify-self: center;
+}
+
+.formstyle span{
+    display:block;
+    color:tomato;
+    font-size: x-small;
+    margin-top: -5px;
+    margin-left: 5px;
 }
