--- a/src/Booking.css
+++ b/src/Booking.css
@@ -34,8 +34,8 @@
     border-top-right-radius: 0px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 12px 0 rgba(0, 0, 0, 0.19);
     overflow: hidden;
-
 }
+
 
 .backgroundbooking h1{
     color:#F4CE14;
@@ -152,4 +152,52 @@
     font-size: x-small;
     margin-top: -5px;
     margin-left: 5px;
+}
+
+.confbackgroundbooking{
+    background-color: #495E57;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    grid-column: 2/14;
+    grid-row: 3/8;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 12px 0 rgba(0, 0, 0, 0.19);
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+}
+
+.confbackgroundbooking h1{
+    color:#F4CE14;
+    font-family:'Markazi Text';
+    font-size: 2.5em;
+    font-weight: bold;
+
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 0px;
+
+}.confbackgroundbooking h2{
+    color:white;
+    font-family:'Markazi Text';
+    font-size: 1.5em;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5px;
+
+}
+
+.confbackgroundbooking p{
+    color: white;
+    font-family: 'Karla', sans-serif;
+    font-size: .8em;
+    word-break: break-all;
+    margin-left: 5%;
+    margin-right: 5%;
+
 }
